parslers-benchmark/src/tests/invalid/syntaxErr/variables/badintAssignments2.wacc
# bad integer assignments - malformed int literal

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int y = 1A4
end 
